--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    
+
+<body class="poppins-regular">
+    <header>
+        <div class="header-container">
+            <h3 class="heading">Influencer products</h3>
+            <ul>
+                <a href="" class="nav">
+                    <li class="navbar">Home</li>
+                </a>
+                <a href="" class="nav">
+                    <li class="navbar">Products</li>
+                </a>
+                <a href="" class="nav">
+                    <li class="navbar">Sign Up</li>
+                </a>
+                <a href="" class="nav">
+                    <li class="navbar">Log In</li>
+                </a>
+                <li class="navbar"><i class="fa-solid fa-magnifying-glass"></i></li>
+                <a href="" class="nav">
+                    <li class="navbar"><i class="fa-solid fa-cart-shopping"></i></li>
+                </a>
+            </ul>
+
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="info">
+                <div class="info-title">
+                    <h2 class="title">Start your Journey as
+                        Influencer</h2>
+                        <p class="info-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                        <div class="extra">
+
+                            <button class="btn-primary">Preebook now</button>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                </div>
+                <div class="info-img">
+                    <img class="bg" src="./images/main-camera.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
