--- a/index.html
+++ b/index.html
@@ -47,16 +47,35 @@
                 <div class="info-title">
                     <h2 class="title">Start your Journey as
                         Influencer</h2>
-                        <p class="info-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                        <div class="extra">
+                    <p class="info-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
+                        scelerisque eros. Lectus faucibus.</p>
+                    <div class="extra">
 
-                            <button class="btn-primary">Preebook now</button>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </div>
+                        <button class="btn-primary">Preebook now</button>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
                 </div>
                 <div class="info-img">
                     <img class="bg" src="./images/main-camera.png" alt="">
                 </div>
+            </div>
+        </section>
+        <section class="sponsors">
+        <img src="./logos/Alibaba.svg" alt="">
+        <img src="./logos/Amazon.svg" alt="">
+        <img src="./logos/Daraz.pk Logo.svg" alt="">
+        <img src="./logos/Ebay.svg" alt="">
+        <img src="./logos/Rakuten.svg" alt="">
+        <img src="./logos/Target.svg" alt="">
+        <img src="./logos/Walmart.svg" alt="">
+        </section>
+        <section>
+            <h3 class="products-title">Popular Collection</h3>
+            <div class="products">
+                <img class="product-img" src="./images/camera.png" alt="">
+                <h3 class="img-title">Flex Tripod</h3>
+                <p class="product-price">$50.48</p>
+                <img src="./images/" alt="" class="review">
             </div>
         </section>
     </main>
