--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -275,7 +276,19 @@
         </section>
     </main>
     <footer>
-
+        <section>
+            <div class="footer">
+                <h3 class="footer-title">Influencer products</h3>
+                <p class="footer-des">Copyright © 2020  influencer products</p>
+                <p class="copy-right">All rights reserved</p>
+            </div>
+            <ul class="footer-icon">
+                <li class="icon"><i class="fa-brands fa-instagram"></i></li>
+                <li class="icon"><i class="fa-solid fa-globe"></i></li>
+                <li class="icon"><i class="fa-brands fa-twitter"></i></li>
+                <li class="icon"><i class="fa-brands fa-youtube"></i></li>
+            </ul>
+        </section>
     </footer>
 </body>
 
